# weather

./: Asynchronous Weather Data Retrieval Task _ Task 1.md  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 82d2337615e4_init_database.py  e6607273e1c0_add_task_table.py
src/: config.py  log.py  main.py  tasks.py
src/api/: service.py  weather_api.py
src/database/: crud.py  db.py  models.py  populate.py
weather_data/Africa/: task_09ad00ee-3b33-48f7-ae65-73e2684575c9.json  task_6b19c35f-f2ae-4b9a-99ac-b92e64cf66a7.json  task_c6357545-95cb-4c0e-800c-310fd2d3e844.json  task_e6c95fef-4d03-4faa-b351-e6fabab89c10.json
weather_data/Asia/: task_09ad00ee-3b33-48f7-ae65-73e2684575c9.json  task_534e7610-4334-4353-8365-f885ce524bf9.json  task_6b19c35f-f2ae-4b9a-99ac-b92e64cf66a7.json  task_a99186b6-0fe4-4a59-9199-adf513c54ed5.json  task_c6357545-95cb-4c0e-800c-310fd2d3e844.json  task_e6c95fef-4d03-4faa-b351-e6fabab89c10.json
weather_data/Europe/: task_09ad00ee-3b33-48f7-ae65-73e2684575c9.json  task_534e7610-4334-4353-8365-f885ce524bf9.json  task_6b19c35f-f2ae-4b9a-99ac-b92e64cf66a7.json  task_a99186b6-0fe4-4a59-9199-adf513c54ed5.json  task_c6357545-95cb-4c0e-800c-310fd2d3e844.json  task_e6c95fef-4d03-4faa-b351-e6fabab89c10.json
weather_data/North America/: task_09ad00ee-3b33-48f7-ae65-73e2684575c9.json  task_4db55b44-9bcd-4ccb-9b43-523a17ccde45.json  task_534e7610-4334-4353-8365-f885ce524bf9.json  task_6b19c35f-f2ae-4b9a-99ac-b92e64cf66a7.json  task_a99186b6-0fe4-4a59-9199-adf513c54ed5.json  (+2 more)
(+10 files in other folders)
