[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Ivan <korneichuk.ik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.8"}
pydantic = "^2.10.6"
pydantic-settings = "^2.8.0"
alembic = "^1.14.1"
aiosqlite = "^0.21.0"
regex = "^2024.11.6"
celery = "^5.4.0"
redis = "^5.2.1"
requests = "^2.32.3"
pandas = "^2.2.3"
levenshtein = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
